Added function to add menu items

--- a/menu_page.html
+++ b/menu_page.html
@@ -3,7 +3,9 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style/global_style.css">
 		<link rel="stylesheet" type="text/css" href="style/menu_style.css">
-		<title>Menu Page</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+		<script type="text/javascript" src="scripts.js"></script>
+		<title>Menu</title>
 	</head>
 	<body>
 		<ul>
@@ -12,103 +14,31 @@
 			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
 		<div class="buttons">
-			<button class="menu_button">
+			<button class="menu_button" id="menu_item_1">
 				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
 				</div>
 				<div class="right">
 					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
+					<div class="item_price">$4.99</div>
 				</div>
 			</button>
-			<button class="menu_button">
+			<button class="menu_button" id="menu_item_2">
 				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
+					<div class="menu_name">Menu Item 2</div>
 				</div>
 				<div class="right">
 					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
+					<div class="item_price">$9.99</div>
 				</div>
 			</button>
-			<button class="menu_button">
+			<button class="menu_button" id="menu_item_3">
 				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
+					<div class="menu_name">Menu Item 3</div>
 				</div>
 				<div class="right">
 					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
-				</div>
-			</button>
-			<button class="menu_button">
-				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
-				</div>
-				<div class="right">
-					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
-				</div>
-			</button>
-			<button class="menu_button">
-				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
-				</div>
-				<div class="right">
-					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
-				</div>
-			</button>
-			<button class="menu_button">
-				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
-				</div>
-				<div class="right">
-					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
-				</div>
-			</button>
-			<button class="menu_button">
-				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
-				</div>
-				<div class="right">
-					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
-				</div>
-			</button>
-			<button class="menu_button">
-				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
-				</div>
-				<div class="right">
-					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
-				</div>
-			</button>
-			<button class="menu_button">
-				<div class="left">
-					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="menu_name">Menu Item 1</div>
-					<div class="menu_address"></div>
-				</div>
-				<div class="right">
-					<div class="vertical_line"></div>
-					<div class="menu_review">$10</div>
+					<div class="item_price">$6.89</div>
 				</div>
 			</button>
 		</div>
