--- a/checkout.html
+++ b/checkout.html
@@ -3,6 +3,8 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style/global_style.css">
 		<link rel="stylesheet" type="text/css" href="style/checkout_style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+		<script type="text/javascript" src="scripts.js"></script>
 	</head>
 	<body>
 		<ul>
