--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style/checkout_style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 		<script type="text/javascript" src="scripts.js"></script>
+		<title>Checkout</title>
 	</head>
 	<body>
 		<ul>
