directs to restaurant page when button is clicked

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 			<div class="dropdown">
 				<button class="dropbtn">Search by meal type</button>
 				<div class="dropdown-content">
-					<a href="#">Breakfast</a>
-					<a href="#">Lunch</a>
-					<a href="#">Dinner</a>
-					<a href="#">Other</a>
+					<a href="restaurants_list.html">Breakfast</a>
+					<a href="restaurants_list.html">Lunch</a>
+					<a href="restaurants_list.html">Dinner</a>
+					<a href="restaurants_list.html">Other</a>
 				</div>
 			</div>
 		</form>
