--- a/checkout.html
+++ b/checkout.html
@@ -26,7 +26,7 @@
 					<label for="address_input">Address</label>
 					<input type="text" name="address" id="address_input" placeholder="Your address.." required>
 					<label for="unit_input">Unit</label>
-					<input type="text" name="unit" id="unit_input" placeholder="Your unit.. (Optional)" required>
+					<input type="text" name="unit" id="unit_input" placeholder="Your unit.. (Optional)" >
 					<label for="city_input">City</label>
 					<input type="text" name="city" id="city_input" placeholder="Your city.." required>
 					<label for="postal_input">Postal Code</label>
