--- a/checkout.html
+++ b/checkout.html
@@ -37,10 +37,7 @@
 						<option value="credit">Credit</option>
 						<option value="cash">Cash</option>
 					</select>
-					<div class="creditCardForm">
-    					<div class="heading">
-        					<h2>Enter Card Info</h2>
-    					</div>
+					<div class="creditCardForm" style="display: none;">
     					<div class="payment">
         					<form>
 					            <div class="form-group owner">
@@ -58,26 +55,26 @@
 					            <div class="form-group" id="expiration-date">
 					                <label>Expiration Date</label>
 					                <select>
-					                    <option value="01">January</option>
-					                    <option value="02">February </option>
-					                    <option value="03">March</option>
-					                    <option value="04">April</option>
-					                    <option value="05">May</option>
-					                    <option value="06">June</option>
-					                    <option value="07">July</option>
-					                    <option value="08">August</option>
-					                    <option value="09">September</option>
-					                    <option value="10">October</option>
-					                    <option value="11">November</option>
-					                    <option value="12">December</option>
+					                    <option value="01">01</option>
+					                    <option value="02">02</option>
+					                    <option value="03">03</option>
+					                    <option value="04">04</option>
+					                    <option value="05">05</option>
+					                    <option value="06">06</option>
+					                    <option value="07">07</option>
+					                    <option value="08">08</option>
+					                    <option value="09">09</option>
+					                    <option value="10">10</option>
+					                    <option value="11">11</option>
+					                    <option value="12">12</option>
 					                </select>
 					                <select>
-					                    <option value="16"> 2016</option>
-					                    <option value="17"> 2017</option>
-					                    <option value="18"> 2018</option>
-					                    <option value="19"> 2019</option>
-					                    <option value="20"> 2020</option>
-					                    <option value="21"> 2021</option>
+					                    <option value="16"> 19</option>
+					                    <option value="17"> 20</option>
+					                    <option value="18"> 21</option>
+					                    <option value="19"> 22</option>
+					                    <option value="20"> 23</option>
+					                    <option value="21"> 24</option>
 					                </select>
 					            </div>
 					        </form>
