Made final changes

--- a/menu_page.html
+++ b/menu_page.html
@@ -9,38 +9,50 @@
 	</head>
 	<body>
 		<ul>
-			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
+			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"><p id="cart_size">0</p></a></li>
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
-		<div class="buttons">
-			<button class="menu_button" id="menu_item_1">
+		<div class="menu_items">
+			<div class="menu_button" id="menu_item_1">
 				<div class="left">
 					<div class="menu_name">Menu Item 1</div>
 				</div>
 				<div class="right">
 					<div class="vertical_line"></div>
-					<div class="item_price">$4.99</div>
+					<div class="item_price">$6.89</div>
+					<div class="vertical_line_2"></div>
+					<div class="add_wrapper">
+						<button class="add_button">Add</button>
+					</div>
 				</div>
-			</button>
-			<button class="menu_button" id="menu_item_2">
+			</div>
+			<div class="menu_button" id="menu_item_2">
 				<div class="left">
 					<div class="menu_name">Menu Item 2</div>
 				</div>
 				<div class="right">
 					<div class="vertical_line"></div>
-					<div class="item_price">$9.99</div>
+					<div class="item_price">$6.89</div>
+					<div class="vertical_line_2"></div>
+					<div class="add_wrapper">
+						<button class="add_button">Add</button>
+					</div>
 				</div>
-			</button>
-			<button class="menu_button" id="menu_item_3">
+			</div>
+			<div class="menu_button" id="menu_item_3">
 				<div class="left">
 					<div class="menu_name">Menu Item 3</div>
 				</div>
 				<div class="right">
 					<div class="vertical_line"></div>
 					<div class="item_price">$6.89</div>
+					<div class="vertical_line_2"></div>
+					<div class="add_wrapper">
+						<button class="add_button">Add</button>
+					</div>
 				</div>
-			</button>
+			</div>
 		</div>
 	</body>
 </html>
