--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<ul>
-			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
+			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"><p id="cart_size">0</p></a></li>
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
@@ -38,47 +38,55 @@
 						<option value="cash">Cash</option>
 					</select>
 					<div class="creditCardForm" style="display: none;">
-    					<div class="payment">
+						<div class="horizontal_line"></div>
+						<div class="payment">
         					<form>
 					            <div class="form-group owner">
 					                <label for="owner">Full Name</label>
-					                <input type="text" class="form-control" id="owner">
+					                <input type="text" class="form-control" id="owner" required>
 					            </div>
-					            <div class="form-group CVV">
-					                <label for="cvv">CVV</label>
-					                <input type="text" class="form-control" id="cvv">
-					            </div>
-					            <div class="form-group" id="card-number-field">
+					            <div class="form-group card_number" id="card-number-field">
 					                <label for="cardNumber">Card Number</label>
-					                <input type="text" class="form-control" id="cardNumber">
+					                <input type="text" class="form-control" id="cardNumber" required>
 					            </div>
+								<div class="form-group CVV">
+									<label for="cvv">CVV</label>
+									<input type="text" class="form-control" id="cvv" required>
+								</div>
 					            <div class="form-group" id="expiration-date">
-					                <label>Expiration Date</label>
-					                <select>
-					                    <option value="01">01</option>
-					                    <option value="02">02</option>
-					                    <option value="03">03</option>
-					                    <option value="04">04</option>
-					                    <option value="05">05</option>
-					                    <option value="06">06</option>
-					                    <option value="07">07</option>
-					                    <option value="08">08</option>
-					                    <option value="09">09</option>
-					                    <option value="10">10</option>
-					                    <option value="11">11</option>
-					                    <option value="12">12</option>
-					                </select>
-					                <select>
-					                    <option value="16"> 19</option>
-					                    <option value="17"> 20</option>
-					                    <option value="18"> 21</option>
-					                    <option value="19"> 22</option>
-					                    <option value="20"> 23</option>
-					                    <option value="21"> 24</option>
-					                </select>
+					                <div>
+										<label>Expiration Date</label>
+									</div>
+									<div class="left_select">
+										<select>
+											<option value="01">01</option>
+											<option value="02">02</option>
+											<option value="03">03</option>
+											<option value="04">04</option>
+											<option value="05">05</option>
+											<option value="06">06</option>
+											<option value="07">07</option>
+											<option value="08">08</option>
+											<option value="09">09</option>
+											<option value="10">10</option>
+											<option value="11">11</option>
+											<option value="12">12</option>
+										</select>
+									</div>
+									<div class="right_select">
+										<select>
+											<option value="16"> 19</option>
+											<option value="17"> 20</option>
+											<option value="18"> 21</option>
+											<option value="19"> 22</option>
+											<option value="20"> 23</option>
+											<option value="21"> 24</option>
+										</select>
+									</div>
 					            </div>
 					        </form>
 					    </div>
+						<div class="horizontal_line"></div>
 					</div>
 					<div class="total_cost">Total: $53.40</div>
 					<input type="submit" value="Order">
