--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<ul>
-			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
+			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"><p id="cart_size">0</p></a></li>
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
