--- a/menu_page.html
+++ b/menu_page.html
@@ -13,6 +13,9 @@
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
+		<div class="menu_title">
+			<h2>Menu</h2>
+		</div>
 		<div class="menu_items">
 			<div class="menu_button" id="menu_item_1">
 				<div class="left">
